--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +35,7 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="lato-font text-gray-2">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -39,5 +48,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <script>
+      window.addEventListener("click", function (e) {
+        document.querySelectorAll(".dropdown").forEach(function (dropdown) {
+          if (!dropdown.contains(e.target)) {
+            // Click was outside the dropdown, close it
+            dropdown.open = false;
+          }
+        });
+      });
+    </script>
   </body>
 </html>
